// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid #1 1`] = `
"#### ⌨️ Code

      1 | extend type Query {
      2 |   messageOfTheDay(date: Date!, force: Boolean): String
      3 | }

#### ⚙️ Options

    {
      "bannedParameters": [
        {
          "keywords": [
            "force"
          ],
          "description": "42"
        }
      ]
    }

#### ❌ Error

      1 | extend type Query {
    > 2 |   messageOfTheDay(date: Date!, force: Boolean): String
        |                                ^^^^^^^ "force" is a prohibited parameter name. Reason: 42"
      3 | }"
`;

exports[`Invalid #2 1`] = `
"#### ⌨️ Code

      1 | extend type Query {
      2 |   messageOfTheDay(date: Date!, cacheBuster: Boolean): String
      3 | }

#### ⚙️ Options

    {
      "bannedParameters": [
        {
          "keywords": [
            "cache"
          ],
          "partialMatch": true,
          "description": "42"
        }
      ]
    }

#### ❌ Error

      1 | extend type Query {
    > 2 |   messageOfTheDay(date: Date!, cacheBuster: Boolean): String
        |                                ^^^^^^^^^^^^^ "Parameter name can not contain "cache". Reason: 42"
      3 | }"
`;

exports[`Invalid #3 1`] = `
"#### ⌨️ Code

      1 | extend type Query {
      2 |   messageOfTheDay(date: Date!, noCache: Boolean): String
      3 | }

#### ⚙️ Options

    {
      "bannedParameters": [
        {
          "keywords": [
            "cache"
          ],
          "partialMatch": true,
          "description": "42"
        }
      ]
    }

#### ❌ Error

      1 | extend type Query {
    > 2 |   messageOfTheDay(date: Date!, noCache: Boolean): String
        |                                ^^^^^^^^^ "Parameter name can not contain "cache". Reason: 42"
      3 | }"
`;

exports[`Invalid #4 1`] = `
"#### ⌨️ Code

      1 | extend type Query {
      2 |   messageOfTheDay(date: Date!, cacheBuster: Boolean, force: Boolean): String
      3 | }

#### ⚙️ Options

    {
      "bannedParameters": [
        {
          "keywords": [
            "cache"
          ],
          "partialMatch": true,
          "description": "42"
        },
        {
          "keywords": [
            "force"
          ],
          "description": "don't do that."
        }
      ]
    }

#### ❌ Error 1/2

      1 | extend type Query {
    > 2 |   messageOfTheDay(date: Date!, cacheBuster: Boolean, force: Boolean): String
        |                                ^^^^^^^^^^^^^ "Parameter name can not contain "cache". Reason: 42"
      3 | }

#### ❌ Error 2/2

      1 | extend type Query {
    > 2 |   messageOfTheDay(date: Date!, cacheBuster: Boolean, force: Boolean): String
        |                                                      ^^^^^^^ "force" is a prohibited parameter name. Reason: don't do that."
      3 | }"
`;
